<resources>
    <string name="app_name">Time2Speak</string>
    <string name="logo_time2speak">Logo_Time2Speak</string>
    <string name="registrarme">Registrarme</string>
    <string name="correo_electronico">Correo Electronico</string>
    <string name="nacimiento">Fecha de Nacimiento</string>
    <string name="contrasena">Contraseña</string>
    <string name="confcontrasena">Confirmar Contraseña</string>
    <string name="registro">REGISTRO</string>
    <string name="apellido">Apellido</string>
    <string name="nombre">Nombre</string>
    <string name="foto_palabra">Foto de la palabra</string>
    <string name="imagen_speaker">Imagen de speaker</string>
    <string name="imagen_microfono">Imagen de microfono</string>
    <string name="microfono_apagado">Microfono Apagado</string>
    <string name="letraspracticar">Letras a practicar</string>
    <string name="palabraspracticar">Palabras a practicar</string>
    <string name="repitapalabra">Repita la palabra 5 veces</string>
    <string name="ejemploGrabacion">Estrella</string>
    <string name="mensajef"> aun esta satisfecho. Recuerda revisar de vez en cuando su estado de ánimo para que este siempre feliz.</string>
    <string name="mensajet"> tiene algo de hambre. Resuelve algunas palabras para que este feliz otra vez.</string>
    <string name="mensajel"> tiene demasiada hambre y esta llorando. Resuelve algunas palabras para que este mas tranquilo.</string>
    <string name="mensajem"> no ha recibido comida en mucho tiempo y esta muy molesto. Apresurate a resolver algunas palabras para darle felicidad otra vez.</string>
    <string name="palabras_asignadas">Palabras Asignadas</string>
</resources>
